Sat Jul 20 12:13:37 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_enc_code_to_mbclen): add new function which returns
	  mbclen from codepoint like as rb_enc_codelen() but 0 for invalid
	  char.

	* include/ruby/encoding.h (rb_enc_code_to_mbclen): declaration and
	  shortcut macro.

Fri Jul 19 21:59:12 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: declare type_name() at the beggining of file.

Fri Jul 19 21:35:09 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c: reduce shady operations.

	* array.c (rb_ary_modify, ary_make_partial, rb_ary_splice,
	  rb_ary_replace, rb_ary_eql, rb_ary_compact_bang):
	  use RARRAY_RAWPTR() instead of RARRAY_PTR().

	* array.c (rb_ary_shift): use RARRAY_PTR_USE() without WB because
	  there are not new relations.

	* array.c (ary_ensure_room_for_unshift): ditto.

	* array.c (rb_ary_sort_bang): ditto.

	* array.c (rb_ary_delete_at): ditto.

	* array.c (rb_ary_reverse_m): use RARRAY_RAWPTR() because
	  there are not new relations.

Fri Jul 19 20:58:20 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c: reduce shade operations.

	* array.c (rb_ary_modify): use RARRAY_RAWPTR().

	* array.c (ary_make_substitution, rb_ary_s_create, ary_make_partial,
	  rb_ary_splice, rb_ary_resize, rb_ary_rotate_m, rb_ary_times):
	  use ary_memcpy().

Fri Jul 19 19:55:28 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_mem_clear): added. This operation doesn't need WB
	  because this operation creates a reference to Qnil.

	* array.c (ary_make_shared, rb_ary_store, rb_ary_shift_m,
	  rb_ary_splice, rb_ary_resize, rb_ary_fill): use ary_mem_clear()
	  instead of rb_mem_clear().

	* array.c (ary_make_shared): use RARRAY_RAWPTR() instead of RARRAY_PTR().

Fri Jul 19 19:18:51 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c: fix commit miss.
	  RGENGC_UNPROTECT_LOGGING should be 0.

Fri Jul 19 19:15:30 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (rb_ary_resurrect): use RARRAY_RAWPTR() because there is no
	  writing.
